--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,6 +1,9 @@
-body {
+* {
   background: #eee;
   font-family: sans-serif;
+  padding: 10px;
+  border: 20px;
+  box-sizing: border-box;
 }
 
 .card {
@@ -11,17 +14,22 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
 }
