--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -24,3 +27,12 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.plants {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+ .plant {
+  max-width: 200px;
+ }
